--- a/Clase-8/hojaSecundaria.html
+++ b/Clase-8/hojaSecundaria.html
@@ -9,6 +9,7 @@
 <body >
     <h1>Soy una hoja secundaria del sitio</h1>
     <a class="link-hoja2" href="./index.html">Volver a inicio</a>
+    <h2>Lista previa:</h2>
     <section>
         <ul></ul>   
     </section>
